--- a/Text-summarizer-master/requirements.txt
+++ b/Text-summarizer-master/requirements.txt
@@ -1,7 +1,7 @@
-streamlit==0.63.0
-gensim==3.8.1
-spacy==2.2.3
+streamlit==0.73.0
+gensim==3.8.3
+spacy==2.3.5
 spacy-streamlit==0.1.0 
 textblob==0.15.3
-pattern==3.6
+pattern3==3.0.0
 nltk==3.5
