--- a/StreamlitApp/requirements.txt
+++ b/StreamlitApp/requirements.txt
@@ -6,3 +6,23 @@ textblob==0.15.3
 nltk==3.5
 pattern==3.6
 en_core_web_sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-2.2.0/en_core_web_sm-2.2.0.tar.gz
+matplotlib==2.2.2
+six==1.11.0
+scipy==1.1.0
+h5py==2.7.1
+pandas==0.22.0
+numpy==1.15.1
+cryptography==2.1.4
+Pillow==5.3.0
+keras==2.2.4
+lmdb==0.94
+moviepy==0.2.3.5
+scikit_learn==0.20.0
+opencv-python==3.4.0.12
+tensorflow==1.15.4
+torchvision==0.8.1
+torch==1.7.0
+seaborn==0.11.1
+altair==4.1.0
+pymysql==0.10.1
+sqlalchemy==1.3.19
