--- a/StreamlitApp/requirements.txt
+++ b/StreamlitApp/requirements.txt
@@ -24,3 +24,4 @@ scikit_learn==0.20.0
 spacy-streamlit==0.1.0 
 keras==2.2.4
 http://download.pytorch.org/whl/cpu/torch-0.4.1-cp36-cp36m-linux_x86_64.whl
+torchvision==0.8.1
