--- a/StreamlitApp/requirements.txt
+++ b/StreamlitApp/requirements.txt
@@ -15,5 +15,5 @@ pymysql==0.10.1
 sqlalchemy==1.3.19
 spacy-streamlit==0.1.0 
 keras==2.2.4
-http://download.pytorch.org/whl/cpu/torch-0.4.1-cp36-cp36m-linux_x86_64.whl
+torch==1.7.0
 torchvision==0.8.1
