--- a/StreamlitApp/requirements.txt
+++ b/StreamlitApp/requirements.txt
@@ -17,3 +17,4 @@ spacy-streamlit==0.1.0
 keras==2.2.4
 http://download.pytorch.org/whl/cpu/torch-1.3.1%2Bcpu-cp36-cp36m-linux_x86_64.whl
 torchvision==0.4.0
+scikit_learn==0.20.0
