--- a/StreamlitApp/requirements.txt
+++ b/StreamlitApp/requirements.txt
@@ -12,3 +12,9 @@ keras==2.2.4
 http://download.pytorch.org/whl/cpu/torch-1.7.0%2Bcpu-cp36-cp36m-linux_x86_64.whl
 torchvision==0.8.1
 scikit_learn==0.20.0
+lxml==4.5.1
+beautifulsoup4==4.9.1
+requests==2.22.0
+json5==0.9.4
+Pillow==7.0.0
+base58==2.0.0
